testdata/good/let-poly.gol
let id = fn(x){x}
in {
 let
  _1 = id(0),
  _2 = id(true),
  _3 = id(id),
  _4 = id(id)(id)(0)
  in { false }
}
